--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -1,5 +1,3 @@
-@import "compass";
-
 body {
     font-family: 'Roboto', sans-serif;
 }
@@ -37,7 +35,7 @@ h2 {
         box-shadow: 1px 1px 1px rgba(0,0,0, .2);
     }
     &.active {
-        @include transform(scale(0.99));
+        transform: scale(0.99);
         box-shadow: none;
     }
 }
