Update demo page

--- a/tests/dummy/app/snippets/basic-slider-options-template.hbs
+++ b/tests/dummy/app/snippets/basic-slider-options-template.hbs
@@ -1,4 +1,4 @@
 {{!-- template file --}}
 {{!-- Call the slider component like any other component --}}
 {{!-- Pass the options object to slider --}}
-<EmberSlider config={{this.options}} />
+<EmberSlider @config={{this.options}} />
